最近的一些bug积累

--- a/前端技能日常总结/实现值等于下标长度为100的数组.html
+++ b/前端技能日常总结/实现值等于下标长度为100的数组.html
@@ -6,17 +6,7 @@
 </head>
 <body>
 <script>
-
-//  console.log(Array.from( new Array(100).keys()))
-    var arr = new Array(100);
-    var ss = arr.keys()
-    console.log('ss',ss)
-
-
-
-
-
-
+    console.log(Array.from( new Array(100).keys()))
 </script>
 </body>
 </html>
