--- a/bug_test/ios.html
+++ b/bug_test/ios.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ios不能正常冒泡的问题</title>
-
+    <title>ios部分标签不能正常冒泡的问题（比如 tr , span ...这样的标签）</title>
+    <!--背景：当使用委托给一个元素添加click事件时 如果事件是委托到document或者body上 并且委托的元素是默认不可点击的(如 div span)此时click事件会失效-->
+    <!--不可点击的元素的点击事件不会冒泡到父级元素 加上cursor: pointer 使得元素变成可点击的了-->
     <style>
         div,button,span {
             display: block;
@@ -17,32 +18,94 @@
             margin: 20px;
 
         }
-
-        .sp {
-            overflow: hidden;
+        #outer,#inner {
+            /*!*cursor: pointer; 解决方案1*/
+            width:200px;
+            height:200px;
+            background: darkred;
         }
     </style>
+
+
+   <!--  事件冒泡与事件捕获
+     事件冒泡：微软提出
+     事件捕获 网景提出
+    都是为了解决页面中的事件流（事件发生顺序）的问题
+
+    事件冒泡：事件会从最内层的元素开始发生 一直向上传播 直到document对象
+    p->div->body->html->document
+
+    事件捕获 ：事件会从最外层发生 直到具体的元素
+    document->html->body->div->p
+
+    Dom2级事件中规定了事件同时支持了事件捕获阶段和事件冒泡阶段 我们可以选择事件处理函数在哪一个阶段被调用
+
+    element.addEventListener(event, function, useCapture)
+    event:需要绑定的事件
+    function：触发事件后要执行的函数
+    useCapture：默认 false 表示在事件冒泡的阶段调用事件处理函数
+                如果参数是true 表示在事件捕获阶段调用处理函数
+   对于事件处理来说 在事件捕获或者事件冒泡阶段处理并没哟明显的优劣之分
+   关于事件监听，W3C规范中定义了3个事件阶段，依次是捕获阶段、目标阶段、冒泡阶段
+   但是由于事件冒泡的事件流模型被多有主流浏览器兼容  从兼容性角度来说还是建议事件冒泡模型
+   IE 旧版本浏览器兼容
+   object.attachEvent(event, function) 默认是事件冒泡阶段调用处理函数 写事件名称时候要加上'on'前缀
+   事件委托就是利用冒泡的原理，把事件加到父元素或祖先元素上，触发执行效果。 jQuery的live()、delegate()、bind()、on()等。
+   提高JavaScript性能。事件委托可以显著的提高事件的处理速度，减少内存的占用
+
+    -->
+
+
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 </head>
 <body>
 
-    <div  id="div">点击我111</div>
-    <button  >点击我222</button>
-     <span  >点击我333</span>
+    <!--<div id="div">点击我111</div>-->
+    <!--<button>点击我222</button>-->
+    <!--<span>点击我333</span>-->
 
+
+    <div id="outer">
+        <p id="inner">Click me!</p>
+        <!--<button id="inner">Click me!</button> 解决方案2-->
+    </div>
 
 <script>
-//    var div = document.getElementById('div');
 
-$('body').on('click','div',function(){
-    alert('111')
-})
-$('body').on('click','button',function(){
-    alert('222')
-})
-//$('.sp').on('click','div',function(){
-//    alert('333')
+//$('body').on('click','div',function(){
+//    alert('111')
 //})
+//$('body').on('click','button',function(){
+//    alert('222')
+//})
+//----
+//$('body').on('click','#outer',function(){
+//    alert('outer')
+//})
+//$('body').on('click','#inner',function(){
+//    alert('inner')
+//})
+//$('body').on('click','#inner',function(){
+//    alert('inner2')
+//})
+
+$('#outer').on('click','#inner',function(){
+    alert('outer inner--不可点击元素不绑定到document body上 解决方案4')
+})
+
+$("#inner").click(function(){
+    alert('将click事件直接绑定到目标元素上-解决方案3')
+})
+
+
+//    一些解决方案
+
+/*1.最简洁的办法，在不能正常冒泡的元素的css属性里面添加，cursor:pointer属性。
+2.换成可以正常冒泡的标签
+3.将click事件直接绑定到目标元素上
+4.​将 click 事件委托到​​​​​非 document 或 body 的​​父级元素上*/
+
+
 </script>
 </body>
 </html>
